--- a/index.html
+++ b/index.html
@@ -246,6 +246,42 @@ $(function () {
         var randomColor = function(opacity) {
             return 'rgba(' + randomColorFactor() + ',' + randomColorFactor() + ',' + randomColorFactor() + ',' + (opacity || '.3') + ')';
         };
+/##############################################/
+		// crsf cookies
+		//  var csrftoken = Cookies.get('csrftoken');
+		// var csrftoken = Cookies.get('csrftoken');
+		
+		// using jQuery
+		function getCookie(name) {
+			var cookieValue = null;
+			if (document.cookie && document.cookie !== '') {
+				var cookies = document.cookie.split(';');
+				for (var i = 0; i < cookies.length; i++) {
+					var cookie = jQuery.trim(cookies[i]);
+					// Does this cookie string begin with the name we want?
+					if (cookie.substring(0, name.length + 1) === (name + '=')) {
+						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+						break;
+					}
+				}
+			}
+			return cookieValue;
+		}
+		var csrftoken = getCookie('csrftoken');
+
+		function csrfSafeMethod(method) {
+			// these HTTP methods do not require CSRF protection
+			return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+		};
+		
+		$.ajaxSetup({
+			beforeSend: function(xhr, settings) {
+				if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+					xhr.setRequestHeader("X-CSRFToken", csrftoken);
+				}
+			}
+		});
+//##############################################/
 
         var config = {
             type: 'line',
@@ -480,12 +516,49 @@ $(function () {
                 "Hostname: " + testResult.hostname + "<br/>" +
             "</h4>";
 
-            var JSONobject = {download: testResult.download,upload: testResult.upload, latency: testResult.latency, jitter: testResult.jitter, testServer: testResult.testServer, ip:testResult.ip_address, hostname:testResult.hostname};
-            var jsonData = JSON.stringify( JSONobject );
+            var JSONobject = {download: testResult.download,upload: testResult.upload};
+			var jsonData = JSON.stringify( JSONobject );
+			
+			/*
+			$.ajaxSetup({
+				beforeSend: function(xhr, settings) {
+					if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+						xhr.setRequestHeader("X-CSRFToken", csrftoken);
+					}
+				}
+			});
+			*/
+			$.ajax({
+				url:'/addresult.php',
+				type:'POST',
+				/*
+				data: {download: JSON.stringify(testResult.download),
+					   upload : JSON.stringify(testResult.upload)},
+					   */
+				//data: '{download: "1",upload:"2"}',
+				//data: {download:1,upload:2},
+				data: jsonData,
+				async: false,
+				
+				//JSON.stringify(data),
+				processData: false,
+				contentType: "application/json; charset=utf-8",
+				dataType: "json",
+			    //data: "download="+testResult.download+"&upload="+testResult.upload,
+				/* dataType:'json', */
+				success:function(result)//we got the response
+			   {
+				alert('Successfully called');
+			   },
+			    error:function(exception){alert('Exeption:'+exception);}
+				
+			});
 
+			/##############################################/
+			/**
             $.post("/resultSubmission.php",{json_string:jsonData});
-
-
+			**/
+/##############################################/
 
 
 
